Fix: About page with dark mode enabled.
Because:
* Some of the elements had white backgrounds when dark mode was enabled.

This commit:
* Replaces the odin mascot gif with an svg that can have a dark background.
* Sets elements with white backgrounds to dark when dark mode is enabled.
* Adds the accent dark color to any cards to make them stand out.

--- a/app/assets/stylesheets/components/about/about.scss
+++ b/app/assets/stylesheets/components/about/about.scss
@@ -81,7 +81,6 @@
     }
 
     .contact-details {
-      margin-top: 60px;
       text-align: center;
 
       @media(max-width: 768px) {
