--- a/app/assets/stylesheets/dark-mode.css
+++ b/app/assets/stylesheets/dark-mode.css
@@ -47,6 +47,7 @@ body,
 .odin-dark-bg,
 .hero {
   background-color: var(--dark-bg-color) !important;
+  background: var(--dark-bg-color) !important;
 }
 
 .curriculum-details-tile:hover {
